--- a/cryptography/study-notes/mathematical-cryptography/z-Block-Ciphers.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-Block-Ciphers.tex
@@ -39,13 +39,13 @@
 		& = &
 			\;\; x_{\pi(1)} \;\;\, x_{\pi(2)} \;\;\, \cdots \;\; x_{\pi(n)} \,,
 		\quad\;\,
-		\textnormal{for each \,$\pi \in S_{n}$\, and \,$x \in \Z_{m}^{n}$}
+		\textnormal{for each \,$\pi \in S_{n}$\, and \,$x \in \Sigma^{n}$}
 		\\
 		D\!\left(\;y_{1}y_{2} \cdots y_{n}\;;\pi\,\right)
 		& = &
 			y_{\pi^{-1}(1)}\,y_{\pi^{-1}(2)} \, \cdots \, y_{\pi^{-1}(n)}\,,
 		\quad
-		\textnormal{for each \,$\pi \in S_{n}$\, and \,$y \in \Z_{m}^{n}$}
+		\textnormal{for each \,$\pi \in S_{n}$\, and \,$y \in \Sigma^{n}$}
 		\end{eqnarray*}
 	\item
 		\textbf{Affine block ciphers}: $\Sigma = \Z_{m} = \Z / m\Z$, for some $m \in \N$,
@@ -105,6 +105,8 @@
 	\item
 		\textbf{Affine permutation cipher}: a Hill cipher (hence, also an affine block cipher)
 		where each $A \in \Z_{m}^{n \times n}$ is a permutation matrix.
+		(Note that an affine permutation cipher is also precisely just a permutation cipher
+		whose alphabet is $\Z_{m}$.)
 	\end{itemize}
 \item
 	Modes of operation:
