--- a/cryptography/study-notes/mathematical-cryptography/z-Block-Ciphers.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-Block-Ciphers.tex
@@ -105,7 +105,7 @@
 	\item
 		\textbf{Affine permutation cipher}: a Hill cipher (hence, also an affine block cipher)
 		where each $A \in \Z_{m}^{n \times n}$ is a permutation matrix.
-		(Note that an affine permutation cipher is also precisely just a permutation cipher
+		(Note that an affine permutation cipher is equivalent to a permutation cipher
 		whose alphabet is $\Z_{m}$.)
 	\end{itemize}
 \item
