--- a/cryptography/study-notes/mathematical-cryptography/z-Block-Ciphers.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-Block-Ciphers.tex
@@ -27,7 +27,7 @@
 		to strings of characters in $\Sigma$ of length $n$.
 	\end{itemize}
 \item
-	Special cases:
+	Special cases (some simple classical -- insecure -- cryptosystems):
 	\begin{itemize}
 	\item
 		\textbf{Substitution ciphers}: block ciphers of block size $n = 1$.
