--- a/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
+++ b/cryptography/study-notes/mathematical-cryptography/mathematical-cryptography.tex
@@ -123,10 +123,10 @@
 
 			%%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
-%\newpage
+\clearpage
 %\small
-%\appendix
-%\input{z-Gibbs-inequality.tex}
+\appendix
+\input{z-Chinese-Remainder-Theorem}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\bibliographystyle{plain}
