--- a/cryptography/study-notes/mathematical-cryptography/z-Chinese-Remainder-Theorem.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-Chinese-Remainder-Theorem.tex
@@ -380,7 +380,7 @@ Then, the following statements hold:
 \begin{enumerate}
 \item
 	The map
-	\,$\varphi \;:\, \Z \,\longrightarrow\, \Z/m_{1}\Z \,\times\, R/m_{2}\Z \,\times\, \cdots \,\times\, R/m_{k}\Z$\,
+	\,$\varphi \;:\, \Z \,\longrightarrow\, \Z/m_{1}\Z \,\times\, \Z/m_{2}\Z \,\times\, \cdots \,\times\, \Z/m_{k}\Z$\,
 	defined by
 	\begin{equation*}
 	x \; \longmapsto \; \left(\, x+m_{1}\Z \,,\, x+m_{2}\Z \,,\, \cdots \,,\, x+m_{k}\Z\,\right)
@@ -394,7 +394,7 @@ Then, the following statements hold:
 	\item
 		$m_{1}\Z \,\cap\, m_{2}\Z \,\cap\, \cdots \,\cap \,m_{k}\Z \;\; = \;\; m_{1} \cdots m_{k} \cdot \Z$\,, and
 	\item
-		$R \,/\, (m_{1} \cdots m_{k} \cdot \Z)$
+		$\Z \,/\, (m_{1} \cdots m_{k} \cdot \Z)$
 		\,$\cong$\,
 			$\Z/m_{1}\Z \,\times\, R/m_{2}\Z \,\times\, \cdots \,\times\, R/m_{k}\Z$\,.
 	\end{enumerate}
