--- a/cryptography/study-notes/mathematical-cryptography/z-Block-Ciphers.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-Block-Ciphers.tex
@@ -83,7 +83,7 @@
 		\textbf{Vigen\`ere cipher}: affine block cipher with $A = I_{n \times n}$,
 		hence $\mathcal{K} = \Z_{m}^{n}$.
 	\item
-		\textbf{Hill cipher}: affine block cipher with $b = 0_{n} \in \Z_{m}^{n}$,
+		\textbf{Hill cipher (linear block cipher)}: affine block cipher with $b = 0_{n} \in \Z_{m}^{n}$,
 		hence
 		\begin{equation*}
 		\mathcal{K}
