--- a/cryptography/study-notes/mathematical-cryptography/z-Stream-Ciphers.tex
+++ b/cryptography/study-notes/mathematical-cryptography/z-Stream-Ciphers.tex
@@ -13,7 +13,7 @@
 	In other words, $\sigma$ is a map from the primary key space $\mathcal{K}$
 	into the collection $\mathcal{S}^{\infty}$ of infinite sequences of
 	elements of the secondary key space $\mathcal{S}$.
-	An important required property of $\rho$ is that each sequence
+	An important required property of $\sigma$ is that each sequence
 	$\sigma(k) \in \mathcal{S}^{\infty}$, $k \in \mathcal{K}$,
 	is supposed to appear random.
 \item
