--- a/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/ellipicCurve-digitalSignatureAlgorithm.tex
+++ b/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/ellipicCurve-digitalSignatureAlgorithm.tex
@@ -115,9 +115,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\bibliographystyle{plain}
 %\bibliography{KenChu-Mendeley}
-
 %\bibliographystyle{alpha}
 %\bibliographystyle{amsplain}
-%\bibliographystyle{acm}
+\bibliographystyle{acm}
+\bibliography{ellipicCurve-digitalSignatureAlgorithm}
 
 \end{document}
