--- a/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-Bitcoin-Thefts-201308.tex
+++ b/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-Bitcoin-Thefts-201308.tex
@@ -5,7 +5,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The attack underlying the Bitcoin thefts of August 2013 was based on the following:
+The attack underlying the Bitcoin thefts of August 2013 was based
+on the following (see \cite{Schneider20130128}):
 \begin{proposition}
 \mbox{}
 \vskip 0.1cm
@@ -133,8 +134,7 @@ Proposition to determine the private signing key of that Bitcoin user.
 \mbox{}
 \vskip 0.1cm
 \noindent
-Bitcoin thefts based on the above vulnerability were indeed discovered/committed
-in August 2013.
+Bitcoin thefts based on the above vulnerability indeed occurred in August 2013.
 \end{remark}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
