--- a/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-public-domain-parameters.tex
+++ b/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-public-domain-parameters.tex
@@ -1,5 +1,5 @@
 
-\section{Public Domain Parameters}
+\section{Public Domain Parameters \cite{Yan2013}, \cite{Paar2010}, \cite{Garrett2005}}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
@@ -41,3 +41,6 @@
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.0cm
+\noindent
+References: \cite{Yan2013}, \cite{Paar2010}, \cite{Garrett2005}
