--- a/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-signing.tex
+++ b/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-signing.tex
@@ -4,7 +4,6 @@
 \setcounter{equation}{0}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \vskip 0.2cm
 \noindent
 \textbf{Key Generation}
@@ -22,11 +21,11 @@
 
 \vskip 0.3cm
 \noindent
-\textbf{Signing a message $m$}
+\textbf{Signing a message \,$m \,\in\, \Sigma^{*}$}
 \vskip 0.3cm
 \noindent
 First, given the message \,$m \in \Sigma^{*}$,\,
-compute \,$e = H(m) \in \Sigma_{n} \cong \{0,1,2,\ldots,N\}$.
+compute \,$e = H(m) \in \Sigma^{n} \cong \{0,1,2,\ldots,N\}$.
 \vskip 0.3cm
 \noindent
 Then, execute the following steps:
@@ -63,3 +62,6 @@ Send
 as the signed message.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.5cm
+\noindent
+References: \cite{Yan2013}, \cite{Paar2010}, \cite{Garrett2005}
