--- a/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-verification.tex
+++ b/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-verification.tex
@@ -1,5 +1,5 @@
 
-\section{Verification}
+\section{Verification \cite{Yan2013}, \cite{Paar2010}, \cite{Garrett2005}}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
@@ -62,3 +62,6 @@ To this end, simply observe that
 \qed
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vskip 0.0cm
+\noindent
+References: \cite{Yan2013}, \cite{Paar2010}, \cite{Garrett2005}
