--- a/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/ellipicCurve-digitalSignatureAlgorithm.bib
+++ b/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/ellipicCurve-digitalSignatureAlgorithm.bib
@@ -70,6 +70,33 @@ AUTHOR = {Scheider, Nils},
   NOTE = {Accessed: 2018-07-20}
 }
 
+@misc{BitcoinOrg20130811,
+AUTHOR = {{\texttt{Bitcoin.org}}},
+  TITLE = {Android Security Vulnerability},
+  howpublished = {\texttt{https://bitcoin.org/en/alert/2013-08-11-android}},
+  NOTE = {Accessed: 2018-07-19}
+}
+
+@misc{AndroidDev20130814,
+AUTHOR = {Klyubin, Alex},
+  TITLE = {Some {SecureRandom} Thoughts},
+  howpublished = {\texttt{\mbox{}\\https://android-developers.googleblog.com/2013/08/some-securerandom-thoughts.html}},
+  YEAR = {2013},
+  MONTH = {August},
+  DATE = {14},
+  NOTE = {Accessed: 2018-07-21}
+}
+
+@misc{BitcoinTalk20130810,
+AUTHOR = {},
+  TITLE = {},
+  howpublished = {\texttt{https://bitcointalk.org/index.php?topic=271486.0/}},
+  YEAR = {2013},
+  MONTH = {August},
+  DATE = {14},
+  NOTE = {Accessed: 2018-07-21}
+}
+
 @book {Aliprantis1998,
     AUTHOR = {Aliprantis, Charalambos D. and Burkinshaw, Owen},
      TITLE = {Principles of Real Analysis},
