--- a/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-signing.tex
+++ b/cryptography/study-notes/EllipticCurve-DigitalSignatureAlgorithm/z-signing.tex
@@ -6,7 +6,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vskip 0.2cm
 \noindent
-\textbf{Key Generation}
+\textbf{Static Key Generation}
 \begin{itemize}
 \item
 	Generate a random \textbf{\color{red}static private} signing key
