--- a/earth-observation/earth-engine/e2e-gee/e2e-gee-06-01.ipynb
+++ b/earth-observation/earth-engine/e2e-gee/e2e-gee-06-01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "e2e-gee-06-01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMq9dAY5kS6UM2+/E/RgiAn",
+      "authorship_tag": "ABX9TyMAMhjywB3VBpnUJ+1mfIS3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,6 +104,137 @@
           "text": [
             "San Fransico California\n",
             "881549\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lon_centre = -75.695000\n",
+        "lat_centre =  45.424722 \n",
+        "\n",
+        "lon_width  = 0.50\n",
+        "lat_width  = 0.30\n",
+        "\n",
+        "ottawaGeometry = ee.Geometry.Polygon([[\n",
+        "  [lon_centre - lon_width/2, lat_centre - lat_width/2],\n",
+        "  [lon_centre - lon_width/2, lat_centre + lat_width/2],\n",
+        "  [lon_centre + lon_width/2, lat_centre + lat_width/2],\n",
+        "  [lon_centre + lon_width/2, lat_centre - lat_width/2],\n",
+        "  [lon_centre - lon_width/2, lat_centre - lat_width/2]\n",
+        "]])\n",
+        "\n",
+        "s2 = ee.ImageCollection('COPERNICUS/S2')"
+      ],
+      "metadata": {
+        "id": "OePMoGEDHG-A"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filtered = s2 \\\n",
+        "    .filter(ee.Filter.lt('CLOUDY_PIXEL_PERCENTAGE', 30)) \\\n",
+        "    .filter(ee.Filter.date('2022-02-01','2022-03-01')) \\\n",
+        "    .filter(ee.Filter.bounds(ottawaGeometry))"
+      ],
+      "metadata": {
+        "id": "yzSd7OJUHmFo"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maskS2clouds(image):\n",
+        "  qa = image.select('QA60')\n",
+        "  cloudBitMask = 1 << 10\n",
+        "  cirrusBitMask = 1 << 11\n",
+        "  mask = qa.bitwiseAnd(cloudBitMask).eq(0).And(\n",
+        "             qa.bitwiseAnd(cirrusBitMask).eq(0))\n",
+        "  return image.updateMask(mask) \\\n",
+        "      .select(\"B.*\") \\\n",
+        "      .copyProperties(image,[\"system:time_start\"])\n",
+        "\n",
+        "def addNDVI(image):\n",
+        "  ndvi = image.normalizedDifference(['B8','B4']).rename('ndvi')\n",
+        "  return image.addBands(ndvi)\n",
+        "\n",
+        "withNdvi = filtered \\\n",
+        "    .map(maskS2clouds) \\\n",
+        "    .map(addNDVI)\n"
+      ],
+      "metadata": {
+        "id": "oaWAO_qxHxnD"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "composite = withNdvi.median()\n",
+        "ndvi = composite.select('ndvi')\n",
+        "\n",
+        "stats = ndvi.reduceRegion(**{\n",
+        "  'reducer': ee.Reducer.mean(),\n",
+        "  'geometry': ottawaGeometry,\n",
+        "  'scale': 10,\n",
+        "  'maxPixels': 1e10\n",
+        "  })\n",
+        "\n",
+        "print(stats.get('ndvi').getInfo())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ekjsIix4IbSq",
+        "outputId": "f3dae2a9-d0fc-456f-e291-1ce05624d392"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.028467623284582716\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# javascript:\n",
+        "# var myList = ee.List.sequence(1, 10);\n",
+        "# var newList = myList.map(function(number) {\n",
+        "#     return ee.Number(number).pow(2);\n",
+        "#     });\n",
+        "# print(newList);\n",
+        "\n",
+        "myList = ee.List.sequence(1, 10)\n",
+        "newList = myList.map(lambda number: ee.Number(number).pow(2))\n",
+        "print(newList.getInfo())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zc47Q4ItJaDY",
+        "outputId": "beb87407-41fb-43c3-9a8e-a042a78e6b06"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
           ]
         }
       ]
