Did the Exercise

--- a/earth-observation/earth-engine/e2e-gee/e2e-gee-06-01.ipynb
+++ b/earth-observation/earth-engine/e2e-gee/e2e-gee-06-01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "e2e-gee-06-01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMAMhjywB3VBpnUJ+1mfIS3",
+      "authorship_tag": "ABX9TyOkoMEQ5tMFWMZZj9MFlhx1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,9 +48,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h-StaBluEBL7",
-        "outputId": "2b729eb8-9511-47d4-ccbb-c649fdb9abf9"
+        "outputId": "18284af3-c1d8-4b73-8c71-de1244b214f8"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,10 +58,10 @@
           "text": [
             "To authorize access needed by Earth Engine, open the following URL in a web browser and follow the instructions. If the web browser does not start automatically, please manually browse the URL below.\n",
             "\n",
-            "    https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=m8NU8AYu0KYazsGuKrzRArINRnqYbrg9dQit7G3vuS4&tc=OHbLBIoKrm7YyBbos_xT3vPTJEigTnk8GJoAM4-uDUo&cc=-N9BkIaPEetlTVgbPEFg_uDxH8Eip0Tc4749xq0xqb8\n",
+            "    https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=T8ZM7oWCWgQXbTi_bWr_6DKZRnPxfBYIF_qJy9O-4Lw&tc=UmvrpVRJnyl4RZnTiLVRUMLh2yhQKqClRS6EjgVK3po&cc=-j2hcHadtJKpaxD923_HkghD9rc04721oHKYcuVh9FY\n",
             "\n",
-            "The authorization workflow will generate a code, which you should paste in the box below. \n",
-            "Enter verification code: 4/1AdQt8qiLe9LRCB18N0lx1DIvSWj6yR_NYBIqG9KK0hO_rapwYcm04bBBUIw\n",
+            "The authorization workflow will generate a code, which you should paste in the box below.\n",
+            "Enter verification code: 4/1AdQt8qj3Fsm94r1lkyBggsKiNsoO3DFMFE3v2P4DMif-zv4GZ7nwiwIviUk\n",
             "\n",
             "Successfully saved authorization token.\n"
           ]
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "40704Ud3GBgL"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -94,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZchvZEDlGFp_",
-        "outputId": "fca2bdb5-8e16-4335-eb3e-9c15dd78ab9f"
+        "outputId": "8ae91516-92a6-4e60-afd9-7bc39306f5cd"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "OePMoGEDHG-A"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "yzSd7OJUHmFo"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "oaWAO_qxHxnD"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -194,9 +194,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ekjsIix4IbSq",
-        "outputId": "f3dae2a9-d0fc-456f-e291-1ce05624d392"
+        "outputId": "62451a56-51af-4307-8ab5-e7b416ff1230"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,9 +226,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zc47Q4ItJaDY",
-        "outputId": "beb87407-41fb-43c3-9a8e-a042a78e6b06"
+        "outputId": "86f721d6-8fd5-428d-f906-2d550ca7d72d"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,6 +238,49 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercise\n",
+        "geometry = ee.Geometry.Point([77.60412933051538, 12.952912912328241]);\n",
+        "\n",
+        "s2 = ee.ImageCollection('COPERNICUS/S2');\n",
+        "\n",
+        "filtered = s2.filter(ee.Filter.lt('CLOUDY_PIXEL_PERCENTAGE', 30)) \\\n",
+        "  .filter(ee.Filter.date('2019-01-01','2020-01-01')) \\\n",
+        "  .filter(ee.Filter.bounds(geometry));\n",
+        "  \n",
+        "print(filtered.size().getInfo());"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WwMFokrOX81a",
+        "outputId": "59e1b716-fb88-4476-b2f5-41fa5c941d1d"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "1Au3TlRUX-aA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
