--- a/machine-learning/deep-learning/cnn/survival-analysis/Polsterl-tf2.ipynb
+++ b/machine-learning/deep-learning/cnn/survival-analysis/Polsterl-tf2.ipynb
@@ -6,7 +6,7 @@
         "id": "azrczYYVvEQb"
       },
       "source": [
-        "# Survival Analysis for Deep Learning\n",
+        "# Survival Analysis via Deep Learning\n",
         "\n",
         "Most machine learning algorithms have been developed to perform classification or regression. However, in clinical research we often want to estimate the time to and event, such as death or recurrence of cancer, which leads to a special type of learning task that is distinct from classification and regression. This task is termed *survival analysis*, but is also referred to as time-to-event analysis or reliability analysis.\n",
         "Many machine learning algorithms have been adopted to perform survival analysis:\n",
