--- a/machine-learning/deep-learning/cnn/mnist/Dwivedi_2022_07_01.ipynb
+++ b/machine-learning/deep-learning/cnn/mnist/Dwivedi_2022_07_01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Dwivedi-2022-07-01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOezmYBYYrflQV0fTbcgM/L",
+      "authorship_tag": "ABX9TyPsHTQaoNMDhAMYojxfrpu9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -279,13 +279,84 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!gsutil --help"
       ],
       "metadata": {
-        "id": "kJ33nJ5WhJF8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kJ33nJ5WhJF8",
+        "outputId": "30d0f9da-1b52-49bf-8d99-085a5457e28a"
       },
-      "execution_count": 31,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Usage: gsutil [-D] [-DD] [-h header]... [-i service_account] [-m] [-o section:flag=value]... [-q] [-u user_project] [command [opts...] args...]\n",
+            "Available commands:\n",
+            "  acl              Get, set, or change bucket and/or object ACLs\n",
+            "  autoclass        Configure autoclass feature\n",
+            "  bucketpolicyonly Configure uniform bucket-level access\n",
+            "  cat              Concatenate object content to stdout\n",
+            "  compose          Concatenate a sequence of objects into a new composite object.\n",
+            "  config           Obtain credentials and create configuration file\n",
+            "  cors             Get or set a CORS JSON document for one or more buckets\n",
+            "  cp               Copy files and objects\n",
+            "  defacl           Get, set, or change default ACL on buckets\n",
+            "  defstorageclass  Get or set the default storage class on buckets\n",
+            "  du               Display object size usage\n",
+            "  hash             Calculate file hashes\n",
+            "  help             Get help about commands and topics\n",
+            "  hmac             CRUD operations on service account HMAC keys.\n",
+            "  iam              Get, set, or change bucket and/or object IAM permissions.\n",
+            "  kms              Configure Cloud KMS encryption\n",
+            "  label            Get, set, or change the label configuration of a bucket.\n",
+            "  lifecycle        Get or set lifecycle configuration for a bucket\n",
+            "  logging          Configure or retrieve logging on buckets\n",
+            "  ls               List providers, buckets, or objects\n",
+            "  mb               Make buckets\n",
+            "  mv               Move/rename objects\n",
+            "  notification     Configure object change notification\n",
+            "  pap              Configure public access prevention\n",
+            "  perfdiag         Run performance diagnostic\n",
+            "  rb               Remove buckets\n",
+            "  requesterpays    Enable or disable requester pays for one or more buckets\n",
+            "  retention        Provides utilities to interact with Retention Policy feature.\n",
+            "  rewrite          Rewrite objects\n",
+            "  rm               Remove objects\n",
+            "  rpo              Configure replication\n",
+            "  rsync            Synchronize content of two buckets/directories\n",
+            "  setmeta          Set metadata on already uploaded objects\n",
+            "  signurl          Create a signed URL\n",
+            "  stat             Display object status\n",
+            "  test             Run gsutil unit/integration tests (for developers)\n",
+            "  ubla             Configure Uniform bucket-level access\n",
+            "  update           Update to the latest gsutil release\n",
+            "  version          Print version info about gsutil\n",
+            "  versioning       Enable or suspend versioning for one or more buckets\n",
+            "  web              Set a website configuration for a bucket\n",
+            "\n",
+            "Additional help topics:\n",
+            "  acls             Working With Access Control Lists\n",
+            "  crc32c           CRC32C and Installing crcmod\n",
+            "  creds            Credential Types Supporting Various Use Cases\n",
+            "  dev              Contributing Code to gsutil\n",
+            "  encoding         Filename encoding and interoperability problems\n",
+            "  metadata         Working With Object Metadata\n",
+            "  naming           Object and Bucket Naming\n",
+            "  options          Global Command Line Options\n",
+            "  prod             Scripting Production Transfers\n",
+            "  security         Security and Privacy Considerations\n",
+            "  support          Google Cloud Storage Support\n",
+            "  versions         Object Versioning and Concurrency Control\n",
+            "  wildcards        Wildcard Names\n",
+            "\n",
+            "Use gsutil help <command or topic> for detailed help."
+          ]
+        }
+      ]
     }
   ]
 }
